--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"@typescript-eslint/eslint-plugin": "^8.45.0",
+		"@typescript-eslint/parser": "^8.45.0",
 		"clsx": "^2.1.1",
-		"eslint": "^9",
+		"eslint": "9.37.0",
 		"eslint-config-next": "15.5.4",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-prettier": "^5.5.4",
@@ -29,5 +31,10 @@
 		"prettier-plugin-tailwindcss": "^0.6.14",
 		"tailwindcss": "^4",
 		"typescript": "^5"
+	},
+	"pnpm": {
+		"overrides": {
+			"eslint": "8.57.1"
+		}
 	}
 }
