--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,9 @@
 		"strict": true,
 		"noImplicitAny": true,
 		"strictNullChecks": true,
+		"strictBindCallApply": true,
+		"noImplicitThis": true,
+		"alwaysStrict": true,
 		"noEmit": true,
 		"esModuleInterop": true,
 		"module": "esnext",
