--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
+		"@next/eslint-plugin-next": "^15.5.4",
 		"@tailwindcss/postcss": "^4",
 		"@types/jest": "^30.0.0",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"@typescript-eslint/eslint-plugin": "^8.45.0",
+		"@typescript-eslint/parser": "^8.46.0",
 		"eslint": "^9",
 		"eslint-config-next": "15.5.4",
 		"eslint-config-prettier": "^10.1.8",
+		"eslint-plugin-react-hooks": "^7.0.0",
 		"eslint-plugin-tailwindcss": "^3.18.2",
 		"jest": "^30.2.0",
 		"prettier": "^3.6.2",
