--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,10 @@
 {
 	"compilerOptions": {
-		"target": "ES2017",
-		"lib": [
-			"dom",
-			"dom.iterable",
-			"esnext"
-		],
+		"target": "esnext", // This was not set to esnext by default?????
+		"lib": ["dom", "dom.iterable", "esnext"],
 		"allowJs": true,
 		"skipLibCheck": true,
 		"strict": true,
-		"noImplicitAny": true,
-		"strictNullChecks": true,
-		"strictBindCallApply": true,
-		"noImplicitThis": true,
-		"alwaysStrict": true,
 		"noEmit": true,
 		"esModuleInterop": true,
 		"module": "esnext",
@@ -28,18 +19,9 @@
 			}
 		],
 		"paths": {
-			"@/*": [
-				"./src/*"
-			]
+			"@/*": ["./src/*"]
 		}
 	},
-	"include": [
-		"next-env.d.ts",
-		"**/*.ts",
-		"**/*.tsx",
-		".next/types/**/*.ts"
-	],
-	"exclude": [
-		"node_modules"
-	]
+	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+	"exclude": ["node_modules"]
 }
